--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "collection of OO libraries sharing the same base and the same ideology - simplicity, self-explaining API, good design",
     "keywords": ["datasheet","database","xml","html","dom","http","filesystem","mail","imap"],
     "homepage": "http://github.com/paranoiq/dogma",
-    "license": ["BSD-3", "GPLv2", "GPLv3"],
+    "license": ["BSD-3"],
     "authors": [
         {
             "name": "Vlasta Neubauer",
