--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,13 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
-        "nette/di": "~2.2",
-        "nette/utils": "~2.2",
-        "nette/database": "~2.2",
-        "nette/reflection": "~2.2",
-        "tracy/tracy": "dev-master as 2.2.99"
+        "php": ">=5.6.0",
+        "nette/utils": "~2.3",
+        "nette/reflection": "~2.3",
+        "tracy/tracy": "~2.3"
     },
     "require-dev": {
-        "nette/tester": "1.3.0",
+        "nette/tester": "~1.4",
         "phing/phing": "2.8.2",
         "squizlabs/php_codesniffer": "1.5.3",
         "jakub-onderka/php-console-highlighter": "0.3.1",
