--- a/build.xml
+++ b/build.xml
@@ -4,6 +4,7 @@
     <property name="file.mode.writable" value="0775"/>
     <property name="path.bin" value="${path.root}/bin"/>
     <property name="path.build" value="${path.root}/build"/>
+    <property name="path.composer.executable" value="composer"/>
     <property name="path.php.executable" value="php"/>
     <property name="path.phpcs.executable" value="${path.bin}/phpcs"/>
     <property name="path.phpcs.ruleset" value="${path.root}/cs-ruleset.xml"/>
@@ -12,9 +13,10 @@
     <property name="path.phpstan.config" value="${path.build}/phpstan/phpstan.neon"/>
     <property name="path.root" value="${project.basedir}"/>
     <property name="path.src" value="${path.root}/Dogma"/>
-    <property name="path.tests" value="${path.root}/tests/Dogma"/>
+    <property name="path.tester.executable" value="${path.bin}/tester"/>
+    <property name="path.tests" value="${path.root}/tests"/>
 
-    <target name="check-php" depends="phplint,phpcs,phpstan"/>
+    <target name="check-php" depends="phplint,phpcs,tests,phpstan"/>
 
     <target name="composer">
         <exec executable="${path.composer.executable}" logoutput="true" passthru="true" checkreturn="true">
@@ -50,6 +52,16 @@
             <arg value="4"/>
             <arg path="${path.src}"/>
             <arg path="${path.tests}"/>
+        </exec>
+    </target>
+
+    <target name="tests">
+        <exec executable="${path.tester.executable}" logoutput="true" passthru="true" checkreturn="true">
+            <arg path="${path.tests}"/>
+            <arg path="-c"/>
+            <arg path="${path.tests}"/>
+            <arg path="--colors"/>
+            <arg path="1"/>
         </exec>
     </target>
 
