--- a/build.xml
+++ b/build.xml
@@ -7,7 +7,7 @@
     <property name="path.composer.executable" value="composer"/>
     <property name="path.php.executable" value="php"/>
     <property name="path.phpcs.executable" value="${path.bin}/phpcs"/>
-    <property name="path.phpcs.ruleset" value="${path.root}/cs-ruleset.xml"/>
+    <property name="path.phpcs.ruleset" value="${path.build}/codesniffer/ruleset.xml"/>
     <property name="path.phplint.executable" value="${path.bin}/parallel-lint"/>
     <property name="path.phpstan.executable" value="${path.bin}/phpstan"/>
     <property name="path.phpstan.config" value="${path.build}/phpstan/phpstan.neon"/>
@@ -16,11 +16,21 @@
     <property name="path.tester.executable" value="${path.bin}/tester"/>
     <property name="path.tests" value="${path.root}/tests"/>
 
+    <target name="check" depends="check-php"/>
+
     <target name="check-php" depends="phplint,phpcs,tests,phpstan"/>
 
     <target name="composer">
         <exec executable="${path.composer.executable}" logoutput="true" passthru="true" checkreturn="true">
             <arg value="install"/>
+        </exec>
+    </target>
+
+    <target name="da" depends="dump-autoload"/>
+
+    <target name="dump-autoload">
+        <exec executable="${path.composer.executable}" logoutput="true" passthru="true" checkreturn="true">
+            <arg value="dump-autoload"/>
         </exec>
     </target>
 
@@ -49,7 +59,7 @@
             <arg value="-c"/>
             <arg path="${path.phpstan.config}"/>
             <arg value="-l"/>
-            <arg value="4"/>
+            <arg value="5"/>
             <arg path="${path.src}"/>
             <arg path="${path.tests}"/>
         </exec>
