--- a/tests/php.ini
+++ b/tests/php.ini
@@ -660,7 +660,7 @@ default_socket_timeout = 60
 
 extension=php_mbstring.dll
 ;extension=php_bz2.dll
-;extension=php_curl.dll
+extension=php_curl.dll
 ;extension=php_dba.dll
 ;extension=php_dbase.dll
 ;extension=php_exif.dll
@@ -671,6 +671,7 @@ extension=php_gd2.dll
 ;extension=php_ifx.dll
 ;extension=php_imap.dll
 ;extension=php_interbase.dll
+extension=php_intl.dll
 ;extension=php_ldap.dll
 ;extension=php_mcrypt.dll
 ;extension=php_mhash.dll
@@ -690,14 +691,14 @@ extension=php_pdo_mysql.dll
 ;extension=php_pdo_oci8.dll
 ;extension=php_pdo_odbc.dll
 ;extension=php_pdo_pgsql.dll
-;extension=php_pdo_sqlite.dll
+extension=php_pdo_sqlite.dll
 ;extension=php_pgsql.dll
 ;extension=php_pspell.dll
 ;extension=php_shmop.dll
 ;extension=php_snmp.dll
 ;extension=php_soap.dll
 ;extension=php_sockets.dll
-extension=php_sqlite.dll
+extension=php_sqlite3.dll
 ;extension=php_sybase_ct.dll
 ;extension=php_tidy.dll
 ;extension=php_xmlrpc.dll
