--- a/composer.json
+++ b/composer.json
@@ -19,14 +19,16 @@
         "tracy/tracy": "~2.4"
     },
     "require-dev": {
-        "consistence/coding-standard": "0.13.0",
+        "consistence/coding-standard": "~2.3",
         "jakub-onderka/php-console-highlighter": "~0.3",
         "jakub-onderka/php-parallel-lint": "~0.8",
         "nette/tester": "~1.7",
         "phing/phing": "~2.16",
-        "phpstan/phpstan": "~0.6",
-        "slevomat/coding-standard": "dev-2.0-dev#06c9cbb",
-        "squizlabs/php_codesniffer": "~2.7"
+        "phpstan/phpstan": "~0.8",
+        "slevomat/coding-standard": "~4.3",
+        "squizlabs/php_codesniffer": "~3.2",
+        "spell-checker/spell-checker": "~0.3",
+        "spell-checker/dictionary-en": "~0.1"
     },
     "autoload": {
         "files": ["src/loader.php"]
