--- a/tests/php.ini
+++ b/tests/php.ini
@@ -697,10 +697,10 @@ extension=php_pdo_sqlite.dll
 ;extension=php_shmop.dll
 ;extension=php_snmp.dll
 ;extension=php_soap.dll
-;extension=php_sockets.dll
+extension=php_sockets.dll
 extension=php_sqlite3.dll
 ;extension=php_sybase_ct.dll
-;extension=php_tidy.dll
+extension=php_tidy.dll
 ;extension=php_xmlrpc.dll
 ;extension=php_xsl.dll
 ;extension=php_zip.dll
