--- a/build.xml
+++ b/build.xml
@@ -8,6 +8,7 @@
     <property name="path.php.executable" value="php"/>
     <property name="path.phpcs.executable" value="${path.bin}/phpcs"/>
     <property name="path.phpcs.ruleset" value="${path.build}/codesniffer/ruleset.xml"/>
+    <property name="path.phpcs.ruleset-tests" value="${path.build}/codesniffer/ruleset-tests.xml"/>
     <property name="path.phplint.executable" value="${path.bin}/parallel-lint"/>
     <property name="path.phpstan.executable" value="${path.bin}/phpstan"/>
     <property name="path.phpstan.config" value="${path.build}/phpstan/phpstan.neon"/>
@@ -25,7 +26,7 @@
 
     <target name="check" depends="check-php"/>
 
-    <target name="check-php" depends="phplint,tests,phpstan,spell-check,phpcs"/>
+    <target name="check-php" depends="phplint,tests,phpstan,phpcs,phpcs-tests,spell-check"/>
 
     <target name="composer">
         <exec executable="${path.composer.executable}" logoutput="true" passthru="true" checkreturn="true">
@@ -47,6 +48,17 @@
             <arg value="--tab-width=4"/>
             <arg value="-sp"/>
             <arg path="${path.src}"/>
+            <arg path="${path.tests}"/>
+        </exec>
+    </target>
+
+    <target name="phpcs-tests">
+        <exec executable="${path.phpcs.executable}" logoutput="true" passthru="true" checkreturn="true">
+            <arg value="--standard=${path.phpcs.ruleset-tests}"/>
+            <arg value="--extensions=phpt"/>
+            <arg value="--encoding=utf-8"/>
+            <arg value="--tab-width=4"/>
+            <arg value="-sp"/>
             <arg path="${path.tests}"/>
         </exec>
     </target>
