--- a/build.xml
+++ b/build.xml
@@ -7,8 +7,8 @@
     <property name="path.composer.executable" value="composer"/>
     <property name="path.php.executable" value="php"/>
     <property name="path.phpcs.executable" value="${path.bin}/phpcs"/>
-    <property name="path.phpcs.ruleset" value="${path.build}/codesniffer/ruleset.xml"/>
-    <property name="path.phpcs.ruleset-tests" value="${path.build}/codesniffer/ruleset-tests.xml"/>
+    <property name="path.phpcs.ruleset" value="${path.root}/vendor/dogma/dogma-dev/src/CodeSniffer/ruleset.xml"/>
+    <property name="path.phpcs.ruleset-tests" value="${path.root}/vendor/dogma/dogma-dev/src/CodeSniffer/ruleset-tests.xml"/>
     <property name="path.phplint.executable" value="${path.bin}/parallel-lint"/>
     <property name="path.phpstan.executable" value="${path.bin}/phpstan"/>
     <property name="path.phpstan.config" value="${path.build}/phpstan/phpstan.neon"/>
