--- a/composer.json
+++ b/composer.json
@@ -21,16 +21,7 @@
         "tracy/tracy": "~2.4"
     },
     "require-dev": {
-        "consistence/coding-standard": "~2.3",
-        "jakub-onderka/php-console-highlighter": "~0.3",
-        "jakub-onderka/php-parallel-lint": "~0.8",
-        "nette/tester": "~1.7",
-        "phing/phing": "~2.16",
-        "phpstan/phpstan": "~0.8",
-        "slevomat/coding-standard": "~4.3",
-        "squizlabs/php_codesniffer": "~3.2",
-        "spell-checker/spell-checker": "~0.3",
-        "spell-checker/dictionary-en": "~0.1"
+        "dogma/dogma-dev": "~0.1"
     },
     "autoload": {
         "classmap": ["src", "tests"]
