--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "tracy/tracy": "~2.4"
     },
     "require-dev": {
-        "dogma/dogma-dev": "~0.1"
+        "dogma/dogma-dev": "0.1.1"
     },
     "autoload": {
         "classmap": ["src", "tests"]
