--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,9 @@
         "ext-dom": "*",
         "ext-intl": "*",
         "ext-calendar":"*",
-        "nette/http": "~2.4",
+        "nette/http": "~2.4|~3.0",
         "nette/reflection": "~2.4",
-        "nette/utils": "~2.4",
+        "nette/utils": "~2.4|~3.0",
         "tracy/tracy": "~2.4"
     },
     "require-dev": {
