Fix test extensions config

--- a/tests/php.ini
+++ b/tests/php.ini
@@ -539,7 +539,7 @@ doc_root =
 user_dir =
 
 ; Directory in which the loadable extensions (modules) reside.
-extension_dir = "./ext/"
+extension_dir = "ext/"
 
 ; Whether or not to enable the dl() function.  The dl() function does NOT work
 ; properly in multithreaded servers, such as IIS or Zeus, and is automatically
