--- a/tests/php.ini
+++ b/tests/php.ini
@@ -665,7 +665,7 @@ extension=php_curl.dll
 ;extension=php_dbase.dll
 ;extension=php_exif.dll
 ;extension=php_fdf.dll
-extension=php_gd2.dll
+;extension=php_gd2.dll
 ;extension=php_gettext.dll
 ;extension=php_gmp.dll
 ;extension=php_ifx.dll
