--- a/composer.json
+++ b/composer.json
@@ -72,7 +72,7 @@
 
         "test": "sh vendor/bin/tester tests -c tests --colors 1",
         "test-all": [
-            "@test",
+            "php80 vendor/nette/tester/src/tester tests -c tests --colors 1",
             "php74 vendor/nette/tester/src/tester tests -c tests --colors 1",
             "php73 vendor/nette/tester/src/tester tests -c tests --colors 1",
             "php72 vendor/nette/tester/src/tester tests -c tests --colors 1"
@@ -80,10 +80,9 @@
         "test-coverage": "sh vendor/bin/tester tests -c tests --colors 1 -p phpdbg --coverage tests/coverage.html --coverage-src src",
 
         "stan": "sh vendor/bin/phpstan analyse -c build/phpstan/phpstan.neon -l 7 src tests",
-        "stan-74": "php74 vendor/phpstan/phpstan/phpstan analyse -c build/phpstan/phpstan.neon -l 7 src tests",
         "stan-all": [
-            "@stan",
-            "@stan-74"
+            "php80 vendor/phpstan/phpstan/phpstan analyse -c build/phpstan/phpstan.neon -l 7 src tests",
+            "php74 vendor/phpstan/phpstan/phpstan analyse -c build/phpstan/phpstan.neon -l 7 src tests"
         ],
 
         "cs-src": "sh vendor/bin/phpcs --standard=vendor/dogma/dogma-dev/src/CodeSniffer/ruleset.xml --extensions=php --encoding=utf-8 --tab-width=4 -sp src",
@@ -94,7 +93,7 @@
 
         "lint": "sh vendor/bin/parallel-lint src tests",
         "lint-all": [
-            "@lint",
+            "php80 vendor/php-parallel-lint/php-parallel-lint/parallel-lint src tests",
             "php74 vendor/php-parallel-lint/php-parallel-lint/parallel-lint src tests",
             "php73 vendor/php-parallel-lint/php-parallel-lint/parallel-lint src tests",
             "php72 vendor/php-parallel-lint/php-parallel-lint/parallel-lint src tests"
@@ -113,7 +112,6 @@
         "test-all": "\u001B[0;33m⭐Run tests on all supported PHP versions (7.2, 7.3, 7.4, 8.0)\u001B[0m",
         "test-coverage": "\u001B[0;33m⭐Run tests with code coverage\u001B[0m",
         "stan": "\u001B[0;33m⭐Run PHPStan check\u001B[0m",
-        "stan-74": "\u001B[0;33m⭐Run PHPStan check on PHP 7.4\u001B[0m",
         "stan-all": "\u001B[0;33m⭐Run PHPStan check on PHP 8.0 and 7.4\u001B[0m",
         "cs-src": "\u001B[0;33m⭐Run CS check on /src\u001B[0m",
         "cs-tests": "\u001B[0;33m⭐Run CS check on /tests\u001B[0m",
