--- a/composer.json
+++ b/composer.json
@@ -43,8 +43,8 @@
         "tc": "@tests-coverage",
         "da": "composer dump-autoload",
         "cs": [
-            "@cs-tests",
-            "@cs-src"
+            "@cs-src",
+            "@cs-tests"
         ],
 
         "build": [
@@ -66,8 +66,8 @@
             "@stan-all",
             "@lint-all",
             "@spell",
-            "@cs-tests",
-            "@cs-src"
+            "@cs-src",
+            "@cs-tests"
         ],
 
         "test": "sh vendor/bin/tester tests -c tests --colors 1",
@@ -79,17 +79,17 @@
         ],
         "test-coverage": "sh vendor/bin/tester tests -c tests --colors 1 -p phpdbg --coverage tests/coverage.html --coverage-src src",
 
-        "stan": "sh vendor/bin/phpstan analyse -c build/phpstan/phpstan.neon -l 7 src tests",
+        "stan": "sh vendor/bin/phpstan analyse --memory-limit 256M -c build/phpstan/phpstan.neon -l 7 src tests",
         "stan-all": [
-            "php80 vendor/phpstan/phpstan/phpstan analyse -c build/phpstan/phpstan.neon -l 7 src tests",
-            "php74 vendor/phpstan/phpstan/phpstan analyse -c build/phpstan/phpstan.neon -l 7 src tests"
+            "php80 vendor/phpstan/phpstan/phpstan analyse --memory-limit 256M -c build/phpstan/phpstan.neon -l 7 src tests",
+            "php74 vendor/phpstan/phpstan/phpstan analyse --memory-limit 256M -c build/phpstan/phpstan.neon -l 7 src tests"
         ],
 
-        "cs-src": "sh vendor/bin/phpcs --standard=vendor/dogma/dogma-dev/src/CodeSniffer/ruleset.xml --extensions=php --encoding=utf-8 --tab-width=4 -sp src",
-        "cs-tests": "sh vendor/bin/phpcs --standard=vendor/dogma/dogma-dev/src/CodeSniffer/ruleset-tests.xml --extensions=php,phpt --encoding=utf-8 --tab-width=4 -sp tests",
-        "cs-fix": "sh vendor/bin/phpcbf --standard=vendor/dogma/dogma-dev/src/CodeSniffer/ruleset-tests.xml --extensions=php,phpt --encoding=utf-8 --tab-width=4 src tests",
+        "cs-src": "vendor/bin/phpcs --standard=vendor/dogma/dogma-dev/src/CodeSniffer/ruleset.xml --extensions=php --encoding=utf-8 --tab-width=4 -sp src",
+        "cs-tests": "vendor/bin/phpcs --standard=vendor/dogma/dogma-dev/src/CodeSniffer/ruleset-tests.xml --extensions=php,phpt --encoding=utf-8 --tab-width=4 -sp tests",
+        "cs-fix": "vendor/bin/phpcbf --standard=vendor/dogma/dogma-dev/src/CodeSniffer/ruleset-tests.xml --extensions=php,phpt --encoding=utf-8 --tab-width=4 src tests",
 
-        "spell": "sh vendor/bin/spell-checker -c build/spell-checker/spell-checker.neon --checkDictionaryFiles --memoryLimit 1024M --noLogo",
+        "spell": "vendor/bin/spell-checker -c build/spell-checker/spell-checker.neon --checkDictionaryFiles --memoryLimit 1024M --noLogo",
 
         "lint": "sh vendor/bin/parallel-lint src tests",
         "lint-all": [
